# auto-coin-trader-v3

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  entrypoint.sh  main.py  pyproject.toml  test_basic.py  test_database.py  test_simple_connection.py  test_strategies.py
config/: api_keys.py  settings.py  symbols.py
config/symbols/vwap/: btcusdt.yaml
config/symbols/vwapstrategy/: btcusdt.yaml
database/: connection.py  migrations.py  models.py  operations.py
docs/: STRATEGY.md  vwap.md
strategies/: base.py  manager.py  vwap_strategy.py
strategies/vwap/: BTCUSDT.yaml
utils/: binance_rest.py  binance_websocket.py  data_models.py  data_validation.py  indicators.py  logging.py  precision.py  simple_websocket.py  stream_handlers.py  time_sync.py  user_data_stream.py  websocket_client.py
